# otus-cpp-09

./: CMakeLists.txt  README.md
src/: bulk.hpp  print.hpp  print_threaded.hpp  processor.hpp  runner.hpp
src/async/: async.cpp  lib_runner.hpp  mq.hpp
src/async/client/: main.cpp
